# MicroManipulatorStepper

./: README.md  bom.csv
construction/v3/: Assembly_Actuator.FCStd  Assembly_MicroManipulator.FCStd  Assembly_WireFlexureUnit.FCStd  BallJointMount.FCStd  BaseBlock.FCStd  EncoderMagnetArray.FCStd  EndEffector.FCStd  JointBall.FCStd  MT6835.FCStd  MotorHorn.FCStd  MotorMount2_KM.FCStd  RubberBand.FCStd  RubberBandCollet.FCStd  StepperMotorNema17.FCStd  WireFlexure.FCStd
documentation/: setup_guide.md
documentation/bom/: bom.md
documentation/setup_guide/: setup_guide.md
firmware/MotionControllerRP/: platformio.ini
firmware/MotionControllerRP/src/: hw_config.h  robot.cpp
software/PythonAPI/: README.md  pyproject.toml
software/PythonAPI/examples/: usage_example.py
software/PythonAPI/open_micro_stage/: __main__.py  api.py  calibration_plotter.py  utils.py
software/PythonAPI/open_micro_stage_api/: api.py  calibration_plotter.py
software/PythonAPI/tests/: conftest.py  test_open_micro_stage.py
